# Joint-Project

./: README.md
control/avoid/: CMakeLists.txt  package.xml
control/avoid/scripts/: avoid_control.py  avoid_listener.py
control/briker_control/: CMakeLists.txt  package.xml
control/briker_control/scripts/: briker_control.py  briker_listener.py
control/line_control/: CMakeLists.txt  package.xml
control/line_control/scripts/: line_control.py  line_listener.py
strategy/avoid_strategy/: CMakeLists.txt  package.xml
strategy/avoid_strategy/launch/: avoid.launch
strategy/avoid_strategy/msg/: WalkingParam.msg
strategy/avoid_strategy/src/: avoid.cpp  avoid.h  avoid_node.cpp  strategy.h
strategy/briker_strategy/: CMakeLists.txt  package.xml
strategy/briker_strategy/launch/: briker.launch
strategy/briker_strategy/src/: briker.cpp  briker.h  briker_node.cpp  strategy.h
strategy/line_strategy/: CMakeLists.txt  package.xml
strategy/line_strategy/launch/: line.launch
strategy/line_strategy/src/: lineStrategy.h  line_strategy_node.cpp  strategy.cpp
vision/line_vision/: CMakeLists.txt  package.xml
vision/line_vision/launch/: line_out.launch
vision/line_vision/msg/: Line.msg
vision/line_vision/src/: lineImg.cpp  lineImg.h  line_vision_node.cpp
vision/mine_vision/: CMakeLists.txt  package.xml
vision/mine_vision/config/: mine_vision_param.yaml
vision/mine_vision/launch/: mine_out.launch
vision/mine_vision/msg/: Rect.msg
vision/mine_vision/src/: mineImg.cpp  mineImg.h  mine_vision_node.cpp
vision/square_vision/: CMakeLists.txt  package.xml
vision/square_vision/config/: square_vision_param.yaml
vision/square_vision/launch/: square_out.launch
vision/square_vision/msg/: Destination.msg
vision/square_vision/src/: squareImg.cpp  squareImg.h  square_vision_node.cpp
