<?xml version="1.0"?>
<package format="2">
  <name>briker_strategy</name>
  <version>0.0.0</version>
  <description>The briker package</description>

  <maintainer email="zst@todo.todo">zst</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>square_vision</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
