<?xml version="1.0"?>
<package format="2">
  <name>line_strategy</name>
  <version>0.0.0</version>
  <description>The line_strategy package</description>

  <maintainer email="zhang@todo.todo">zhang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv2</depend>
  <depend>line_vision</depend>
  <depend>briker_strategy</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
