<?xml version="1.0"?>
<package format="2">
  <name>line_vision</name>
  <version>0.0.0</version>
  <description>The line_vision package</description>

  <maintainer email="zhang@todo.todo">zhang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
